--- a/src/config/.env.development
+++ b/src/config/.env.development
@@ -7,3 +7,7 @@ GH_APP_ID = 415223
 GITHUB_CLIENT_ID = Iv1.3e0043a513b639b3
 GITHUB_CLIENT_SECRET = 04cf5aaa836554278fcfaa5628b36b49d37a1db6
 GITHUB_CALLBACK_URL = http://localhost:8080/api/users/githubcallback
+
+
+GMAIL_USER = leoitdev@gmail.com
+GMAIL_PASS = xdwkqgphroyxbarx
